--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--Pending things:2.Resume linked 3.repository,site -->
 
 <head>
     <meta charset="UTF-8">
@@ -47,18 +46,17 @@
         <div class="row text-center">
             <div class="col-md-12">
                 <h1 class="display-4">Hi, I am <span class="text-highlight" id="name">Tanisha Prabhu</span></h1>
-                <!--<img src="3 dots.gif" ></img>-->
-                <p class="lead font-weight-bold">Web Developer</p>
+                <p ><h3><b>Web Developer</b></h3></p>
                 <div class="mt-4">
                     <a href="#contact" class="btn btn-primary btn-lg mr-2 mb-2">Get in touch</a>
                     <a href="#projects" class="btn btn-secondary btn-lg mr-2 mb-2">Browse projects</a>
-                    <a href="#" class="btn btn-info btn-lg mb-2">My Resume</a>
+                    <a href="Tanisha Prabhu Resume.pdf" target="_blank" class="btn btn-info btn-lg mb-2">My Resume</a>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- About Section -->
+
     <!-- About Section -->
     <section id="about" class="py-5">
         <div class="container">
@@ -87,7 +85,7 @@
         <div class="container">
             <h2 class="text-highlight text-center mb-5">Projects</h2>
             <div class="row">
-                <!-- Project 1 -->
+
                 <div class="col-md-4">
                     <div class="card mb-4 shadow-sm">
                         <img src="p1.1.png" id="imgs" class="card-img-top" alt="Project 1">
@@ -100,7 +98,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- Project 2 -->
+
                 <div class="col-md-4">
                     <div class="card mb-4 shadow-sm">
                         <img src="meowcounter.jpg" id="imgs" class="card-img-top" alt="Project 2">
@@ -115,7 +113,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- Project 3 -->
+
                 <div class="col-md-4">
                     <div class="card mb-4 shadow-sm">
                         <img src="calc.jpg" class="card-img-top" alt="Project 3" id="imgs">
